tests/integration/formats/gcc/check-color.txt
tests/integration/formats/sample.cs:1:1: error: class found
1 >| 馃煢public class 馃煢馃煣Foo馃煣
2  | 馃煢{馃煢
3  | 馃煢    public 馃煢馃煪int馃煪馃煢 馃煢馃煣Bar馃煣馃煢 { get; set; }馃煢
4  | 馃煢    public馃煢馃煪 void 馃煪馃煣Baz馃煣馃煪() { }馃煪
5 >| 馃煢}馃煢

tests/integration/formats/sample.cs:7:1: error: class found
7 | 馃煢public class 馃煢馃煣Qux馃煣馃煢 { }馃煢
    ^~~~~~~~~~~~~~~~~~~~

2 errors in 1 file
